--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Git and GitHub course with Max</h1>
     <h1>Learning is very easy with him</h1>
+    <p>Hello world!</p>
   </body>
 </html>
