added paragraph and index.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <body>
     <h1>Git and GitHub course with Max</h1>
     <h1>Learning is very easy with him</h1>
-    <p>Hello world!</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eum,
+      molestias cum asperiores soluta earum quia, tenetur error aperiam dolores
+      suscipit natus unde necessitatibus ullam harum cupiditate maxime
+      doloremque rem?
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+      voluptatem nisi, dolores corrupti architecto enim! Amet illum eum maxime
+      quis consectetur totam perferendis earum, doloribus expedita officia
+      aperiam quaerat vero!
+    </p>
   </body>
 </html>
