--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Git and GitHub course with Max</h1>
     <h1>Learning is very easy with him</h1>
+    <h1>Learn For free Git and Github</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eum,
       molestias cum asperiores soluta earum quia, tenetur error aperiam dolores
